Project

General

Profile

Actions

Bug #49322

closed

notifications: handle exceptions inside the persistent notification thread

Added by Yuval Lifshitz over 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
notification
Backport:
pacific
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

currently exception are unhanded and causing a crash when happening inside the persistent notification worker thread.

observed an "std::bad_alloc" exception - not sure what is the root cause of the exception.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #49555: pacific: notifications: handle exceptions inside the persistent notification threadResolvedCory SnyderActions
Actions #1

Updated by Yuval Lifshitz over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 39521
Actions #2

Updated by Casey Bodley about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49555: pacific: notifications: handle exceptions inside the persistent notification thread added
Actions #4

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF