rgw/notification: add exception handling for persistent notification thread

Fixes: https://tracker.ceph.com/issues/49322

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>